<resources>
    <string name="app_name">UserRetrofit</string>
    <string name="title_enter_post">Crear usuario</string>
    <string name="hint_id">_id</string>
    <string name="hint_fn">first name</string>
    <string name="hint_ln">last name</string>
    <string name="hint_email">email</string>
    <string name="action_submit">Crear usuario</string>
    <string name="title_enter_get_eamil">Introduce email</string>
    <string name="action_submit_get">Buscar usuario</string>
    <string name="title_app">Aplicación Retrofit</string>
    <string name="action_submit_GET">Buscar usuario por email</string>
    <string name="action_submit_POST">Crear usuario</string>
</resources>
